# audiere

./: .travis.yml  CMakeLists.txt  appveyor.yml
src/: device_ds.cpp
src/speexfile/: speexfile.cpp  speexfile.h
